Revert "Update index.html"

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <h1>Want to create/request a new project?</h1>
     <div id="map"></div>
     <button id="locate-button">Locate Me</button>
-    <button id="mark-area-button">Start Marking</button>
+    <button id="mark-area-button">Mark Area</button>
     <form id="report-form">
         <input type="text" id="project-name" placeholder="Project Name" required>
         <select id="project-type" required>
