--- a/index.html
+++ b/index.html
@@ -266,14 +266,14 @@
 
     <script>
         const firebaseConfig = {
-            apiKey: "APIKEY",
-            authDomain: "AUTHDOMAIN",
-            projectId: "PROJECTID",
-            storageBucket: "STORAGEBUCKET",
-            messagingSenderId: "MESSAGESENDERID",
-            appId: "APPID",
-            measurementId: "MEASUREMENTID",
-            databaseURL: "DBURL"
+            apiKey: "AIzaSyDAjjHIa2ZPqQ_Ybqp-uHbOleKwTV7AQAc",
+            authDomain: "lecor-f87a8.firebaseapp.com",
+            projectId: "lecor-f87a8",
+            storageBucket: "lecor-f87a8.appspot.com",
+            messagingSenderId: "606158282239",
+            appId: "1:606158282239:web:40537977bdf29e86059bca",
+            measurementId: "G-21F11LBMR6",
+            databaseURL: "https://lecor-f87a8-default-rtdb.asia-southeast1.firebasedatabase.app/"
         };
 
         firebase.initializeApp(firebaseConfig);
