--- a/index.html
+++ b/index.html
@@ -304,14 +304,24 @@
             loadMarkersFromFirestore();
 
             // Add USGS Earthquake layer
-            const earthquakeLayer = L.tileLayer('https://earthquake.usgs.gov/arcgis/rest/services/eq/catalog_7day/MapServer/tile/{z}/{y}/{x}', {
-                attribution: 'Earthquake data from USGS'
-            }).addTo(map);
+            const earthquakeLayer = L.geoJSON(null, {
+    onEachFeature: function (feature, layer) {
+        layer.bindPopup('Magnitude: ' + feature.properties.mag + '<br>Location: ' + feature.properties.place);
+    }
+}).addTo(map);
+
+// Fetch the GeoJSON data and add it to the map
+fetch('https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_day.geojson')
+    .then(response => response.json())
+    .then(data => earthquakeLayer.addData(data));
 
             // Add Flood data using appropriate open-source data
-            const floodLayer = L.tileLayer('https://floodmap.floodservicemap.org/tile/{z}/{x}/{y}', {
-                attribution: 'Flood data from GFMS'
-            }).addTo(map);
+            const floodLayer = L.tileLayer.wms('https://floodmap.modaps.eosdis.nasa.gov/arcgis/services/NRT_Flood/MapServer/WMSServer', {
+    layers: '1',
+    format: 'image/png',
+    transparent: true,
+    attribution: 'Flood data from NASA Global Flood Monitoring System'
+}).addTo(map);
 
             map.on('click', (e) => {
                 if (markerCount > 0) {
