--- a/index.html
+++ b/index.html
@@ -707,7 +707,10 @@
 
         window.onload = initMap;
     </script>
-
+     <!-- Watermark -->
+    <!-- Ashfaqul Alam -->
+    <!-- Disclaimer: now I initially coded it in replit and since I figured I was going to host it on github pages, I thought it was essential to keep it as efficient as possible due to the limitations of free hosting. Hence, the code was partially inhanced using the A.I. code auto completion/suggestion tool that comes with replit for free-->
+    <!-- Creator Info -->
     <div id="contact-info">
         This website was created by <a href="https://www.facebook.com/profile.php?id=100016903667257&mibextid=ZbWKwL">Ashfaqul Alam</a> to serve our broader social interest | Email: kittlerthebittler@gmail.com
     </div>
