--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #374148;
+            background-color: #94a389;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -727,7 +727,9 @@
 
         window.onload = initMap;
     </script>
-
+       <!-- Watermark -->
+    <!-- Ashfaqul Alam -->
+    <!-- Disclaimer: now I initially coded it in replit and since I figured I was going to host it on github pages, I thought it was essential to keep it as efficient as possible due to the limitations of free hosting. Hence, the code was partially inhanced using the code auto completion/suggestion tool that comes with replit for free-->
     <div id="contact-info">
         This website was created by <a href="https://www.facebook.com/profile.php?id=100016903667257&mibextid=ZbWKwL">Ashfaqul Alam</a> to serve our broader social interest | Email: kittlerthebittler@gmail.com
     </div>
