--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #94a389;
+            background-color: #c3fa9b;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
